did changes in heap cache